[package]
name = "locker"
version = "0.0.1"
authors = ["Jerboa"]

edition = "2021"

[[bin]]
name = "locker"
path = "src/locker.rs"

[dependencies]
rand =    { git = "https://github.com/rust-lang-nursery/rand" }
openssl = { version = "0.10", features = ["vendored"] }
serde = "1.0"
serde_json = "0.9"

[workspace]
members=["crypto"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
