[package]
name = "locker"
version = "0.3.0"
authors = ["Jerboa"]

edition = "2021"

[[bin]]
name = "locker"
path = "src/main.rs"

[[bin]]
name = "encrypt_decrypt"
path = "src/encrypt_decrypt.rs"

[dependencies]
rand =    { git = "https://github.com/rust-lang-nursery/rand" }
openssl = { version = "0.10", features = ["vendored"] }
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
rpassword = "7.3"
semver = "1.0.20"
regex = "1.10.2"
libflate = "2"
base64 = "0.21.5"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
